[gd_scene load_steps=47 format=3 uid="uid://brm6evk7y4fpa"]

[ext_resource type="Texture2D" uid="uid://bb14hk4htqxwc" path="res://Sprites/grass_tileset_16x16 (1)/sprite_09.png" id="1_s7el2"]
[ext_resource type="Script" path="res://Player/Player.gd" id="2_g4wi8"]
[ext_resource type="Texture2D" uid="uid://eoxiubfty1rq" path="res://Sprites/warrior spritesheet calciumtrice.png" id="3_3gmlg"]
[ext_resource type="PackedScene" uid="uid://br4plsxxcqhej" path="res://Utility/hurt_box.tscn" id="4_yw2t5"]
[ext_resource type="PackedScene" uid="uid://dwkqpo4msqo3s" path="res://Utility/enemy_spawner.tscn" id="5_1samt"]
[ext_resource type="PackedScene" uid="uid://m0a8if3juqb0" path="res://Enemies/swarmer.tscn" id="6_1kk6y"]
[ext_resource type="PackedScene" uid="uid://seqhrig28nxx" path="res://Enemies/slime.tscn" id="6_qeh38"]
[ext_resource type="Script" path="res://Utility/spawn_info.gd" id="7_smlp3"]
[ext_resource type="PackedScene" uid="uid://c2dp8yxevmwue" path="res://Enemies/goblin_berserker.tscn" id="9_rnjkq"]
[ext_resource type="Texture2D" uid="uid://doqug4fme4bg0" path="res://Sprites/bars/sprite_0.png" id="9_rnyv0"]
[ext_resource type="Texture2D" uid="uid://b7fy7v41i1m5u" path="res://Sprites/bars/sprite_3.png" id="10_hg6mu"]
[ext_resource type="FontFile" uid="uid://mldyex0yiqhe" path="res://Various/Aloevera-OVoWO.ttf" id="11_1osxp"]
[ext_resource type="PackedScene" uid="uid://dyopwibacswmy" path="res://Enemies/goblin_rider.tscn" id="11_vtt8s"]
[ext_resource type="PackedScene" uid="uid://dk3m7scaxvl7a" path="res://Enemies/goblin.tscn" id="12_nd717"]
[ext_resource type="AudioStream" uid="uid://b2jvot0rx68np" path="res://Sound/zapsplat_multimedia_game_sound_advance_level_up_complete_bright_positive_003_97627.mp3" id="12_uv3ek"]
[ext_resource type="Texture2D" uid="uid://dcd5tsrvu5ht2" path="res://Sprites/bars/sprite_2.png" id="12_yrhiw"]
[ext_resource type="PackedScene" uid="uid://belajbw01dwip" path="res://Enemies/boogeyman.tscn" id="13_sqoy2"]
[ext_resource type="AudioStream" uid="uid://b47guc031irsb" path="res://Sound/victory.mp3" id="18_1gint"]
[ext_resource type="AudioStream" uid="uid://cl212ij8tdx0v" path="res://Sound/defeat.mp3" id="19_css6y"]
[ext_resource type="PackedScene" uid="uid://cp7jli0wy5gxk" path="res://Utility/basic_button.tscn" id="20_vr7k1"]
[ext_resource type="AudioStream" uid="uid://cymmctyubt7eq" path="res://Sound/game_theme.mp3" id="21_n72ux"]
[ext_resource type="Script" path="res://World/sound_music.gd" id="22_r030b"]

[sub_resource type="Animation" id="Animation_k2emd"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_dena8"]
resource_name = "idle2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14, 15, 16, 17, 18, 19, 20]
}

[sub_resource type="Animation" id="Animation_6l7be"]
resource_name = "walk_right"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26, 27, 28, 29]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ba8rh"]
_data = {
"idle": SubResource("Animation_k2emd"),
"idle2": SubResource("Animation_dena8"),
"walk_right": SubResource("Animation_6l7be")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aajc6"]
size = Vector2(34, 91)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v5vqq"]
size = Vector2(37, 100)

[sub_resource type="CircleShape2D" id="CircleShape2D_sfwda"]
radius = 12.4279

[sub_resource type="CircleShape2D" id="CircleShape2D_snu6r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cij42"]
radius = 7.018

[sub_resource type="Resource" id="Resource_ovypm"]
script = ExtResource("7_smlp3")
time_start = 0
time_end = 30
enemy = ExtResource("12_nd717")
enemy_num = 1
enemy_spawn_delay = 0

[sub_resource type="Resource" id="Resource_8tvol"]
script = ExtResource("7_smlp3")
time_start = 30
time_end = 60
enemy = ExtResource("6_qeh38")
enemy_num = 3
enemy_spawn_delay = 0

[sub_resource type="Resource" id="Resource_wf2yh"]
script = ExtResource("7_smlp3")
time_start = 60
time_end = 90
enemy = ExtResource("9_rnjkq")
enemy_num = 2
enemy_spawn_delay = 1

[sub_resource type="Resource" id="Resource_uty0k"]
script = ExtResource("7_smlp3")
time_start = 90
time_end = 120
enemy = ExtResource("6_1kk6y")
enemy_num = 4
enemy_spawn_delay = 0

[sub_resource type="Resource" id="Resource_d7a5t"]
script = ExtResource("7_smlp3")
time_start = 120
time_end = 150
enemy = ExtResource("12_nd717")
enemy_num = 7
enemy_spawn_delay = 0

[sub_resource type="Resource" id="Resource_imnxn"]
script = ExtResource("7_smlp3")
time_start = 120
time_end = 150
enemy = ExtResource("9_rnjkq")
enemy_num = 2
enemy_spawn_delay = 0

[sub_resource type="Resource" id="Resource_4llc8"]
script = ExtResource("7_smlp3")
time_start = 150
time_end = 180
enemy = ExtResource("6_qeh38")
enemy_num = 8
enemy_spawn_delay = 0

[sub_resource type="Resource" id="Resource_6qixj"]
script = ExtResource("7_smlp3")
time_start = 180
time_end = 210
enemy = ExtResource("11_vtt8s")
enemy_num = 1
enemy_spawn_delay = 0

[sub_resource type="Resource" id="Resource_jmofb"]
script = ExtResource("7_smlp3")
time_start = 180
time_end = 210
enemy = ExtResource("12_nd717")
enemy_num = 5
enemy_spawn_delay = 0

[sub_resource type="Resource" id="Resource_5i0nc"]
script = ExtResource("7_smlp3")
time_start = 210
time_end = 240
enemy = ExtResource("6_1kk6y")
enemy_num = 8
enemy_spawn_delay = 0

[sub_resource type="Resource" id="Resource_7endb"]
script = ExtResource("7_smlp3")
time_start = 240
time_end = 300
enemy = ExtResource("9_rnjkq")
enemy_num = 4
enemy_spawn_delay = 0

[sub_resource type="Resource" id="Resource_sl4e6"]
script = ExtResource("7_smlp3")
time_start = 240
time_end = 300
enemy = ExtResource("11_vtt8s")
enemy_num = 1
enemy_spawn_delay = 0

[sub_resource type="Resource" id="Resource_bjp2p"]
script = ExtResource("7_smlp3")
time_start = 240
time_end = 300
enemy = ExtResource("6_qeh38")
enemy_num = 3
enemy_spawn_delay = 0

[sub_resource type="Resource" id="Resource_kqoyr"]
script = ExtResource("7_smlp3")
time_start = 240
time_end = 300
enemy = ExtResource("6_1kk6y")
enemy_num = 3
enemy_spawn_delay = 0

[sub_resource type="Resource" id="Resource_qokne"]
script = ExtResource("7_smlp3")
time_start = 300
time_end = 302
enemy = ExtResource("13_sqoy2")
enemy_num = 1
enemy_spawn_delay = 2

[node name="World" type="Node2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 2
texture_repeat = 2
scale = Vector2(3, 3)
texture = ExtResource("1_s7el2")
region_enabled = true
region_rect = Rect2(-0.606, -0.49, 3000, 2000)

[node name="Player" type="CharacterBody2D" parent="." groups=["player"]]
scale = Vector2(0.64, 0.64)
script = ExtResource("2_g4wi8")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture_filter = 1
scale = Vector2(3.33991, 3.33991)
texture = ExtResource("3_3gmlg")
hframes = 10
vframes = 10
frame = 8

[node name="PlayerAnimation" type="AnimationPlayer" parent="Player/Sprite2D"]
speed_scale = 1.25
libraries = {
"": SubResource("AnimationLibrary_ba8rh")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_aajc6")

[node name="Camera2D" type="Camera2D" parent="Player"]
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.1
drag_top_margin = 0.1
drag_right_margin = 0.1
drag_bottom_margin = 0.1

[node name="HurtBox" parent="Player" instance=ExtResource("4_yw2t5")]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="Player/HurtBox" index="0"]
position = Vector2(1.5, 0)
shape = SubResource("RectangleShape2D_v5vqq")

[node name="Attack" type="Node2D" parent="Player"]
scale = Vector2(1.25, 1.25)

[node name="IceSpearTimer" type="Timer" parent="Player/Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="IceSpearAttackTimer" type="Timer" parent="Player/Attack/IceSpearTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="WhirlwindTimer" type="Timer" parent="Player/Attack"]
unique_name_in_owner = true
wait_time = 3.0

[node name="WhirlwindAttackTimer" type="Timer" parent="Player/Attack/WhirlwindTimer"]
unique_name_in_owner = true
wait_time = 0.2

[node name="LanceBase" type="Node2D" parent="Player/Attack"]
unique_name_in_owner = true

[node name="EnemyDetectionArea" type="Area2D" parent="Player"]
scale = Vector2(1.25, 1.25)
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/EnemyDetectionArea"]
scale = Vector2(66, 66)
shape = SubResource("CircleShape2D_sfwda")

[node name="GrabArea" type="Area2D" parent="Player"]
scale = Vector2(1.5625, 1.5625)
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/GrabArea"]
scale = Vector2(10.089, 10.089)
shape = SubResource("CircleShape2D_snu6r")

[node name="CollectArea" type="Area2D" parent="Player"]
scale = Vector2(1.5625, 1.5625)
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/CollectArea"]
scale = Vector2(3.60758, 3.60758)
shape = SubResource("CircleShape2D_cij42")

[node name="EnemySpawner" parent="." instance=ExtResource("5_1samt")]
spawns = Array[ExtResource("7_smlp3")]([SubResource("Resource_ovypm"), SubResource("Resource_8tvol"), SubResource("Resource_wf2yh"), SubResource("Resource_uty0k"), SubResource("Resource_d7a5t"), SubResource("Resource_imnxn"), SubResource("Resource_4llc8"), SubResource("Resource_6qixj"), SubResource("Resource_jmofb"), SubResource("Resource_5i0nc"), SubResource("Resource_7endb"), SubResource("Resource_sl4e6"), SubResource("Resource_bjp2p"), SubResource("Resource_kqoyr"), SubResource("Resource_qokne")])

[node name="Loot" type="Node2D" parent="." groups=["loot"]]

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="lblTimer" type="Label" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 538.0
offset_top = 35.0
offset_right = 615.0
offset_bottom = 69.0
theme_override_fonts/font = ExtResource("11_1osxp")
theme_override_font_sizes/font_size = 30
text = "00:00"

[node name="ColorRect" type="ColorRect" parent="GUILayer/GUI/lblTimer"]
show_behind_parent = true
layout_mode = 0
offset_left = -4.0
offset_top = -8.0
offset_right = 35.0
offset_bottom = 32.0
scale = Vector2(2.16, 1)
color = Color(0.321569, 0.321569, 0.321569, 0.713726)

[node name="XpBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture_under = ExtResource("9_rnyv0")
texture_progress = ExtResource("10_hg6mu")

[node name="lbl_level" type="Label" parent="GUILayer/GUI/XpBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 32.0
offset_top = 41.0
offset_right = 139.0
offset_bottom = 77.0
theme_override_fonts/font = ExtResource("11_1osxp")
theme_override_font_sizes/font_size = 32
text = "Level: 1
"

[node name="HealthBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 851.0
offset_right = 1151.0
offset_bottom = 100.0
texture_under = ExtResource("9_rnyv0")
texture_progress = ExtResource("12_yrhiw")

[node name="lblHealth" type="Label" parent="GUILayer/GUI/HealthBar"]
layout_mode = 0
offset_left = 37.0
offset_top = 37.0
offset_right = 77.0
offset_bottom = 60.0
theme_override_fonts/font = ExtResource("11_1osxp")
text = "HP
"

[node name="LevelUp" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 0
offset_left = 400.0
offset_top = -500.0
offset_right = 800.0

[node name="lbl_LevelUp" type="Label" parent="GUILayer/GUI/LevelUp"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("11_1osxp")
theme_override_font_sizes/font_size = 25
text = "Level Up!
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Upgrades" type="VBoxContainer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 20.0
offset_top = 50.0
offset_right = 380.0
offset_bottom = 150.0

[node name="sound_levelup" type="AudioStreamPlayer2D" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
stream = ExtResource("12_uv3ek")
volume_db = -5.0

[node name="Deathpanel" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 0
offset_left = 373.0
offset_top = 660.0
offset_right = 773.0
offset_bottom = 1160.0

[node name="lbl_Result" type="Label" parent="GUILayer/GUI/Deathpanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 9.0
offset_top = 16.0
offset_right = 391.0
offset_bottom = 123.0
theme_override_fonts/font = ExtResource("11_1osxp")
theme_override_font_sizes/font_size = 25
text = "Result
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="sound_victory" type="AudioStreamPlayer2D" parent="GUILayer/GUI/Deathpanel"]
unique_name_in_owner = true
position = Vector2(2, 0)
stream = ExtResource("18_1gint")
volume_db = -10.0

[node name="sound_defeat" type="AudioStreamPlayer2D" parent="GUILayer/GUI/Deathpanel"]
unique_name_in_owner = true
stream = ExtResource("19_css6y")
volume_db = -10.0

[node name="button_menu" parent="GUILayer/GUI/Deathpanel" instance=ExtResource("20_vr7k1")]
layout_mode = 0
offset_left = 125.0
offset_top = 391.0
offset_right = 285.0
offset_bottom = 451.0
text = "Quit
"

[node name="sound_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_n72ux")
volume_db = -20.0
autoplay = true
script = ExtResource("22_r030b")

[connection signal="playerdeath" from="Player" to="sound_music" method="_on_player_playerdeath"]
[connection signal="hurt" from="Player/HurtBox" to="Player" method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Player/Attack/IceSpearTimer" to="Player" method="_on_ice_spear_timer_timeout"]
[connection signal="timeout" from="Player/Attack/IceSpearTimer/IceSpearAttackTimer" to="Player" method="_on_ice_spear_attack_timer_timeout"]
[connection signal="timeout" from="Player/Attack/WhirlwindTimer" to="Player" method="_on_whirlwind_timer_timeout"]
[connection signal="timeout" from="Player/Attack/WhirlwindTimer/WhirlwindAttackTimer" to="Player" method="_on_whirlwind_attack_timer_timeout"]
[connection signal="body_entered" from="Player/EnemyDetectionArea" to="Player" method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="Player/EnemyDetectionArea" to="Player" method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="Player/GrabArea" to="Player" method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="Player/CollectArea" to="Player" method="_on_collect_area_area_entered"]
[connection signal="click_end" from="GUILayer/GUI/Deathpanel/button_menu" to="Player" method="_on_button_menu_click_end"]

[editable path="Player/HurtBox"]
